[tool.poetry]
name = "aiub-notes-dl"
version = "0.1.0"
description = "Download notes from AIUB portal"
authors = ["Fahad Hossain <evilinfinite7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
BeautifulSoup4 = "^4.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
